--- a/index.css
+++ b/index.css
@@ -1,51 +1,60 @@
 body {
     margin: 0;
+    overflow: hidden;
 }
 
-#CANVAS, #GRID {
-    position: fixed;
-    right: 0;
+#GRID, CANVAS {
+    position: absolute;
 }
 
 #TOOL_BAR {
+    position: absolute;
+    background: #000;
+    left: 1em;
+    top: 1em;
+    cursor: move;
+    border: .5em solid #fff;
+    border-color: gray #504c4c;
+    box-shadow: 9px 9px 9px 0 #000;
+}
+
+.btn {
+    margin: 1rem;
+    padding: 0.5rem;
     text-align: center;
-    position: fixed;
-    left: 0;
-    width: 20vw;
-    height: 100vh;
+    color: #fff;
+    cursor: pointer;
+    user-select: none;
+    border: 1px solid #3c3c3c;
 }
 
 .tool {
     margin: 1rem;
-    height: 4rem;
-    width: 4rem;
-    line-height: 4rem;
-    border-radius: 50%;
-    border: 1rem solid #fff;
-    background: #009688;
+    padding: 0.5rem;
+    text-align: center;
     color: #fff;
     cursor: pointer;
     user-select: none;
+    border: 1px solid #3c3c3c;
 }
 
 .use {
-    border-style: double;
+    box-shadow: inset 0 0 0 2px #808080, inset 0 0 0px 4px #000, inset 0 0 0px 6px #504c4c;
 }
-
 
 .selector {
     width: 6rem;
     height: 0.5rem;
     margin: 1rem;
-    background-color: black;
+    background-color: gray;
 }
 
 .slider {
     border-radius: 50%;
     width: 1rem;
     height: 1rem;
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     position: relative;
     bottom: 0.5rem;
     line-height: 1rem;
