--- a/index.css
+++ b/index.css
@@ -45,9 +45,7 @@ body {
 
 #COLOR_SELECTOR {
     position: absolute;
-    border: 0.5em solid;
-    border-color: gray #504c4c;
-    box-shadow: 9px 9px 9px 0 #000;
+    box-shadow: 0px 0px 0px 4px grey, 0px 0px 0px 8px #504c4c, 10px 9px 15px 10px #000;
 }
 
 #COLOR_FORMAT{
@@ -56,21 +54,31 @@ body {
  }
 
  #PASTE_BAR {
+    position: absolute;
     width: 100vw;
     height: 100vh;
-    text-align: center;
  }
 
- #PASTE {
+ #PASTE, #PASTE_CLOSE {
     color: #fff;
     background: #000;
+    cursor: pointer;
+}
+    
+#PASTE {
+    float: left;
+}
+
+#PASTE:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+#PASTE_CLOSE {
+    float: right;
  }
 
- #PASTE:hover {
-     opacity: 0.5;
-     cursor: pointer;
- }
-
- #COPY_SELECTED {
-     position: absolute;
+ #COPY_SELECT {
+    position: absolute;
+    cursor: crosshair;
  }
