--- a/index.css
+++ b/index.css
@@ -58,6 +58,13 @@ body {
 #current-color {
     height: 2rem;
     width: 8rem;
+    margin: auto;
+    box-shadow: inset 0px 0px 0px 1px #e8989a;
+}
+
+#paint-box {
+    margin-top: 0.5em;
+    box-shadow: 0 0 0 1px #e8989a;
 }
 
 
